feat: order status highlighting in the order menu